fix mobile view spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ h1, .genre {
 }
 
 #main {
-    margin-bottom: 2em;
+    padding-top: 0;
 }
 
 #navbar {
